Add an endpoint to retrieve one time slot
